--- a/HackerUProjectMishi/pom.xml
+++ b/HackerUProjectMishi/pom.xml
@@ -19,12 +19,31 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>6.14.3</version>
+    <scope>test</scope>
+</dependency>
+
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+</dependency>
+
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.0.5</version>
+</dependency>
+
+ <dependency>
+        <groupId>com.github.mifmif</groupId>
+        <artifactId>generex</artifactId>
+        <version>1.0.2</version>
     </dependency>
+
   </dependencies>
 
   <build>
